Finished constraint integration
- changed ThreeDim constraints to work with AbstractUnaryConstraint
- altered DatParseListener to ignore entry definition order
- added ExpectedSize check to AbstractConstraint#validate()